# rgb-schemas

./: Cargo.toml
.github/workflows/: build.yml  codecov.yml  lint.yml  run.yaml  test.yml
schemata/: AutoBurnNonInflatableAsset.rgb  AutoBurnNonInflatableAsset.rgba  CollectibleFungibleAsset.rgb  CollectibleFungibleAsset.rgba  InflatableFungibleAsset.rgb  InflatableFungibleAsset.rgba  NonInflatableAsset.rgb  NonInflatableAsset.rgba  PermissionedFungibleAsset.rgb  PermissionedFungibleAsset.rgba  UniqueDigitalAsset.rgb  UniqueDigitalAsset.rgba
src/: lib.rs  main.rs  nia.rs  nia2.rs
test/: nia-example.rgb  nia-example.rgba
